[metadata]
name = seleniumlib
url = https://github.com/jscotka/seleniumlib
description = Python selenium wrapper for cockpit tests
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = jscotka@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Utilities
keywords =
    testing
    selenium

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    selenium

[options.packages.find]
exclude =
    tests*
